# FileTransfer

./: README.md  pyproject.toml
src/simple_ft/: main.py
src/simple_ft/client/: client.py
src/simple_ft/server/: server.py
